[tool.poetry]
name = "sensor"
version = "0.1.0"
description = "传感器步态识别项目"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
PySimpleGUI = "^3.29"
matplotlib = "^3.0"
opencv-python = "^4.1"
scipy = "^1.2"
keras = "^2.2"
tensorflow = "^1.13"
pywinusb = "^0.4.2"
Pillow = "^6.0"
fastdtw = "^0.3.2"
yapf = "^0.27.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

